@@ -1,5 +1,7 @@
 - make sure we don't check certificate in aria2 except when we want to
 - exclude kernel-source from orphan processing (#53426)
+- do not list as orphans kernel packages which where not installe through
+  dependencies (#53425)
 
 Version 6.28.1 - 3 September 2009
 
